tests/ui/traits/vtable/vtable-multiple.stderr
error: vtable entries for `<S as C>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as A>::foo_a),
           Method(<S as B>::foo_b),
           TraitVPtr(<S as B>),
           Method(<S as C>::foo_c),
       ]
  --> $DIR/vtable-multiple.rs:15:1
   |
LL | trait C: A + B {
   | ^^^^^^^^^^^^^^

error: vtable entries for `<S as B>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as B>::foo_b),
       ]
  --> $DIR/vtable-multiple.rs:9:1
   |
LL | trait B {
   | ^^^^^^^

error: aborting due to 2 previous errors

